--- a/README
+++ b/README
@@ -4,19 +4,21 @@ TOC
 
 1. Describtion
   1.1 What is it?
-  1.2 Currently supported inheritance types
+  1.2 Supported inheritance types
   1.3 Added keyword
   1.4 Code example
   1.5 Note
 2. Usage
   2.1 Basics
   2.2 Compressed output
-  2.3 Remote files
-  2.4 Further usage
+  2.3 Commented output
+  2.4 Remote files
+  2.5Further usage
 3. Processing Examples
   3.1 Simple Case
   3.2 Multiple Inheritance
-  3.3 Overwriting
+  3.3 Recursive Inheritance
+  3.4 Overwriting
 
 
 
@@ -39,11 +41,11 @@ Its usage is similar to the one by php classes. With that
 you can inherit properties from parent classes by using
 this keyword.
 
-1.2 Currently supported inheritance types:
+1.2 Supported inheritance types:
 --------------------------------------------------------
 + single
 + multiple
-+ recursive (1st level only)
++ recursive (infinite levels)
 
 1.3 Added keyword
 --------------------------------------------------------
@@ -86,7 +88,17 @@ stripped file output:
 Then you can paste each of the outputs into your
 favorite text editor and save it.
 
-2.3 Remote files
+2.3 Commented output
+-------------------------------------------------------
+If you need to debug your generated CSS file(s) you have
+the option to have auto generated comments about the
+properties that have been inherited from other parents.
+The comments will tell you what property was applied
+by what parent. How to turn on:
+ http://path/to/ecss.php?file=/css/YOUR_CSS_FILE_1.css&comment
+
+
+2.4 Remote files
 --------------------------------------------------------
 Instead of just including local files, you could also
 include remote files. Use the following syntax:
@@ -97,7 +109,7 @@ for the file parameter
 or compressed
  http://path/to/ecss.php?file=http://url.tld/style.css&compressed
 
-2.4 Further usage
+2.5 Further usage
 --------------------------------------------------------
 You can also use the ecss.php file as a code layouter
 for stripped CSS files. If you want to browse a remote
@@ -182,10 +194,44 @@ Preprocessed file (auto-generated):
         width:       60px;
     }	
 
+
 	
+3.3 Recursive inheritance
+--------------------------------------------------------	
+
+Unpreprocessed CSS file (what you code):
+
+    .parentCorp {
+        color:  red;
+        margin: 10px;
+    }
+    .parentBase extends .parentCorp {
+        color:  blue;
+    }
+    #head extends .parentBase {
+    }
+
 	
-	
-3.3 Overwriting
+Preprocessed file (auto-generated):
+
+    .parentCorp {
+        color:  red;
+        margin: 10px;
+    }
+    .parentBase {
+        color:  blue;
+        margin: 10px;
+    }
+    #head extend {
+        color:  blue;
+        margin: 10px;
+    }
+
+
+
+
+
+3.4 Overwriting
 --------------------------------------------------------
 
 Unpreprocessed CSS file (what you code):
